change to models

--- a/Thor/Pages/UtilityBills.razor
+++ b/Thor/Pages/UtilityBills.razor
@@ -43,7 +43,7 @@
             {
                 <tr>
                     <td>@bill.Id</td>
-                    <td>@bill.GetBillType(bill.Type)</td>
+                    <td>@bill.BillType?.Name</td>
                     <td>@bill.CompanyName</td>
                     <td>@bill.Year</td>
                     <td>@bill.Month</td>
