--- a/Thor/Pages/Index.razor
+++ b/Thor/Pages/Index.razor
@@ -7,15 +7,25 @@
 <SurveyPrompt Title="How is Blazor working for you?" />
 
 <div class="row">
-    <div class="col-6">
+    <div class="col-6 align-content-center">
         <NavLink class="nav-link" href="utilitybills">
-            <span aria-hidden="true"></span> Utility Bills
+            <span aria-hidden="true"><strong>Utility Bills</strong></span>
         </NavLink>
     </div>
 
-    <div class="col-6">
+    <div class="col-6 align-content-center">
         <NavLink class="nav-link" href="monthlyactivities">
-            <span aria-hidden="true"></span> Monthly Activities
+            <span aria-hidden="true"><strong>Monthly Activities</strong></span>
+        </NavLink>
+    </div>
+    <div class="col-6 align-content-center">
+        <NavLink class="nav-link" href="">
+            <span aria-hidden="true"><strong>Reminders</strong></span>
+        </NavLink>
+    </div>
+    <div class="col-6 align-content-center">
+        <NavLink class="nav-link" href="">
+            <span aria-hidden="true"><strong>Resources</strong></span>
         </NavLink>
     </div>
 </div>
