--- a/Thor/Pages/UtilityBills.razor
+++ b/Thor/Pages/UtilityBills.razor
@@ -6,6 +6,7 @@
 
 @using Thor.Data.Enums
 @using Thor.Data.Models
+@using Thor.Data.Services.Implementations
 @inject UtilityBillService UtilityBillService
 
 <h1>Utility Bills</h1>
